--- a/frontend/loginstyle.css
+++ b/frontend/loginstyle.css
@@ -69,6 +69,7 @@ form .txt_field{
     margin: -5px 0 20px 5px;
     color: #a6a6a6;
     cursor: pointer;
+    padding-top: 15px;
 }
 .pass :hover{
     text-decoration: underline;
